# biocpd

./: .gitignore  ATLAS_REGISTRATION_REVIEW.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
benchmarks/: atlas_dtype_bench.py  atlas_registration_bench.py
biocpd/: affine_registration.py  atlas_registration.py  constrained_deformable_registration.py  deformable_registration.py  emregistration.py  rigid_registration.py
tests/: test_regressions.py
